--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  
 <select class="form-select" aria-label="Default select example" id="mySelect">
   <option></option>
-  <option value="../index.html">Home</option>
+  <option value="#">Home</option>
   <option value="#">New</option>
   <option value="#">Live Camera</option>
   <option value="#">Photo</option>
